add property to amh.json

--- a/app/langs/amh.json
+++ b/app/langs/amh.json
@@ -6,7 +6,10 @@
         "team": "ቡድን",
         "league": "ሊግ",
         "achievements": "ስኬቶች"
-      }
+      },
+      "team": {},
+      "league": {},
+      "achievements": {}
     }
   }
 }
